<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Goldii</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome</string>
    <string name="click_here">Click Here</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_username">username</string>
    <string name="hint_password">password</string>
    <string name="hint_confirm_password">confirm password</string>
    <string name="hint_e_mail">e-mail</string>
    <string name="username">username</string>
    <string name="submit_btn">Submit</string>
</resources>
